k8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: caschuen/cnd-joboffers-auth-service
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1Gi"
              cpu: "100m"
      restartPolicy: Always
