k8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: caschuen/cnd-joboffers-frontend
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "4Gi"
              cpu: "1.0"
      restartPolicy: Always
