k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-event
  name: kafka-event
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka-event

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-event
  name: kafka-event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-event
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-event
    spec:
      containers:
        - image: confluentinc/cp-kafka:7.4.3
          name: kafka-event
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: "kafka-data"
              mountPath: "/var/lib/kafka/data"
      volumes:
        - name: "kafka-data"
          persistentVolumeClaim:
            claimName: "kafka-data-claim"
