k8s/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongodb

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy: {}
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo
          name: mongodb
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: "mongo-mount"
              mountPath: "/data/db"
      volumes:
        - name: "mongo-mount"
          persistentVolumeClaim:
            claimName: "mongodb-volume-claim"
        - name: "mongo-init-database"
          configMap:
            name: init-mongodb-configmap
