k8s/zookeeper.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  ports:
    - port: 2181
      protocol: TCP
      targetPort: 2181
  selector:
    app: zookeeper

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  strategy: {}
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: confluentinc/cp-zookeeper:7.4.3
          name: zookeeper
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: "zookeeper-data"
              mountPath: "/var/lib/zookeeper/data"
            - name: "zookeeper-log"
              mountPath: "/var/lib/zookeeper/log"
      volumes:
        - name: "zookeeper-data"
          persistentVolumeClaim:
            claimName: "zookeeper-data-claim"
        - name: "zookeeper-log"
          persistentVolumeClaim:
            claimName: "zookeeper-log-claim"
